# controllers/ratingManager.js
@@ -19,3 +19,7 @@ export function deleteRating(req, res) {
 export function getRatings(req, res) {
     service.getRatings(req, res);
 }
+
+export function getRatingsByUser(req, res) {
+    service.getRatings(req, res);
+}
